api gateway/k8s_gateway_api/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  annotations:
    konghq.com/strip-path: 'true'
spec:
  hostnames:
  - myapp.com
  parentRefs:
  - kind: Gateway
    name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /servicea
    backendRefs:
    - name: servicea-service
      port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-b
  annotations:
    konghq.com/strip-path: 'true'
spec:
  hostnames:
  - myapp.com
  parentRefs:
  - kind: Gateway
    name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /serviceb
    backendRefs:
    - name: serviceb-service
      port: 80
